2009-04-10 Magnus Hagdorn
 * configure.in: figure out C compiler and how to use cfortran.h
 * src/fortran/Makefile.am: add new targets
 * src/fortran/cfortran.h: add cfortran.h v 4.3
 * src/fortran/eis_glide.F90: write run statistics to file
 * src/fortran/eismint3_glide.F90: ditto
 * src/fortran/glex_ebm.F90: ditto
 * src/fortran/glint_example.F90: ditto
 * src/fortran/simple_glide.F90: ditto
 * src/fortran/glimmer_commandline.F90: get name of results file from 
   command line
 * src/fortran/glint_commandline.F90: ditto
 * glimmer_writestats.F90: new module wrapping C stats file writer
 * src/fortran/nc2config.F90: fix minor bug
 * src/fortran/test_writestats.F90: test_writestats module
 * src/fortran/writestats.[ch]: collect some runtime statistics and write
   to file

2009-04-10 Magnus Hagdorn
 * configure.in: test if fortran compiler supports f03 command line parser
 * src/fortran/Makefile.am: add new programs, sources
 * src/fortran/eis_glide.F90: use new command line parser
 * src/fortran/eismint3_glide.F90: ditto
 * src/fortran/glex_ebm.F90: ditto
 * src/fortran/glint_example.F90: ditto
 * src/fortran/simple_glide.F90: ditto
 * src/fortran/glimmer_commandline.F90: new module providing common command
   line interface
 * src/fortran/glint_commandline.F90: as previous, only for glint/glex models
 * src/fortran/nc2config.F90: improve command line parser
 * src/fortran/test_commandline.F90: test command line parser

2009-01-21 Magnus Hagdorn
 * bootstrap: search m4macros directory for extra m4 macros
 * configure.in: use ACX_BLAS to find blas library, check if netCDF
   library is split up into a c and fortran lib
 * glimmer-config.in: store blas and netCDF library flags
 * m4macros/acx_blas.m4: added from autoconf macro library
 * m4macros/acx_lapack.m4: ditto
 * src/fortran/Makefile.am: find netCDF and blas libraries

2008-11-30 Ian Rutt
 * Corrected <config.inc> to "config.inc" to conform to strict usage
   required by gfortran 4.4.0

2008-05-08 Ian Rutt